namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-officehub-cms-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-officehub-cms-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "people-analytics"
    cloud-platform.justice.gov.uk/application: "officehub-cms-app"
    cloud-platform.justice.gov.uk/owner: "people-analytics: peopleanalytics@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/officehub-cms-app-v2"
    cloud-platform.justice.gov.uk/team-name: "officehub-cms-app-v2-admin-team"
    cloud-platform.justice.gov.uk/review-after: "24-Dec-2024"
